# tm2tb

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  app.py  docker-compose.yml  myproject.py  pyproject.toml  pytest.ini  requirements.txt  requirements_colab.txt  test_examples.py  test_tm2tb.py  tm2tb.py  tm2tb_api.py  tm2tb_api_test.py  tm2tb_app.py  tm2tb_examples.ipynb  tutorial.py
client/: __init__.py  bisentence.py  sentence.py  tm2tb_bilingual_reader.py  tm2tb_bisentence.py  tm2tb_bitext.py  tm2tb_candidate_terms.py  tm2tb_sentence.py
copy/: linkedin page available
data/: panda_text_english.txt  raw_bitext.txt  test_bitext_en_es.csv  test_bitext_en_es.mqxliff  test_bitext_en_es.mxliff  test_bitext_en_es.tmx  test_bitext_en_es.xlsx  test_results.jsonl  tm2tb-test.mqxliff
lib/: csv_to_df.py  fn_to_df.py  get_azure_dict_lookup.py  get_azure_translation.py  get_grams.py  get_stopwords.py  mqxliff_to_df.py  mxliff_to_df.py  my_word_vectorizer.py  preprocess.py  read_bilingual_file.py  tb_functions.py  tb_to_azure.py  tm_iter_zip.py  tmtb_to_html.py  tmx_to_df.py
scripts/: DGT_TMs_script.py  dataset_builder.py  unit_tests_helper.py  warm_cache.py
static/: guía_de_uso.txt  new 1.html  style.css  style_colors.css  style_flexes.css  style_fonts.css  style_positions.css
stops_vectors/: en.npy  fr.npy
templates/: index.html  index_results.html
tests/: 22015A1219.tmx_en-de.csv  22015A1219.tmx_en-es.csv  22015A1219.tmx_en-fr.csv  22015A1219.tmx_en-it.csv  22015A1219.tmx_en-pt.csv  22016A1019.tmx_en-de.csv  22016A1019.tmx_en-es.csv  test_examples.py  (+11 more)
(+40 files in other folders)
